# smart-vending-machine-zephyr

./: .markdownlint.json  CMakeLists.txt  CONTRIBUTING.md  README.md  prj.conf
.github/workflows/: ci.yml
boards/: README.md
docs/: README.md  quick_start.md
include/: display.h  keypad.h  servo_dispense.h  ultrasonic_verify.h  wifi_inventory.h
simulator/: simulate.py
src/: display.c  keypad.c  keypad.h  lcd_i2c.c  lcd_i2c.h  main.c  servo_dispense.c  servo_dispense.h  ultrasonic_verify.c  ultrasonic_verify.h  wifi_inventory.c  wifi_inventory.h
